2008-09-22  Derek R. Price  <derek@ximbiot.com>

	* edit.c (ncheck_fileproc): Rename to...
	(ncheck_filesdoneproc): ...this and call the new function...
	(send_notifications): ...here for efficiency.  Some cleanup.

	* find_names.c (find_dirs): Export function.
	* find-names.h (find_dirs): Add prototype.

2008-09-19  Derek R. Price  <derek@ximbiot.com>

	* find_names.c (Find_Names, Find_Directories): Assume entries will be
	set by caller.
	* find-names.h (Find_Names): Update prototype.
	* recurse.c (do_recursion): Always open entries when available.
	* sanity.sh (errmsg2-16): Update to compensate.

	* logmsg.c (do_verify): Some cleanup.

	* commit.c (commit): Don't set update_dir for client/server calls to
	do_editor().
	* logmsg.c (do_editor): Some cleanup.
	* sanity.sh (editor): Update to compensate.

	* edit.c (ncheck_fileproc): Some cleanup.

	* checkout.c (checkout_proc): Use empty update dir instead of ".".
	* client.c (call_in_directory): Handle preservation of update_dir from
	server.  Clean up and simplify slightly.
	(is_cvsroot_level): Handle empty update_dir.
	* server.c (output_dir): Preserve update_dir when sending it to
	client.  Clean up.
	* subr.c (dir_append_dirs): Fix TRACE.

	* modules.c (my_module): Repagination.

	* server.c (expand_proc): Some cleanup.

2008-09-18  Derek R. Price  <derek@ximbiot.com>

	* lock.c: Some cleanup.
	(lock_obtained, lock_wait): Only print message when !really_quiet.
	(set_lock): Don't print error messages, but return errno and...
	(Reader_Lock, set_promotable_lock, lock_dir_for_write, internal_lock):
	...rely on callers to report the error.
	(set_readlock_name, readers_exist): Declare inline.
	(multiroot3-10): Update to compensate for new error messages.

	* client.c, commit.c, fileattr.c, find_names.c: Some cleanup.

	* hash.c (walklist): Make it OK for callback procs to delete the node
	they were passed.

2008-09-17  Derek R. Price  <derek@ximbiot.com>

	* add.c (add), client.c (call_in_directory, update_entries,